fix issue with cambermast website not remaining loaded in dev

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,7 @@
   "name": "Cambermast Work Hub",
   "image": "mcr.microsoft.com/devcontainers/javascript-node:20-bookworm",
   "postCreateCommand": "npm install",
+  "postStartCommand": "bash .devcontainer/post-start.sh",
   "forwardPorts": [5173],
   "customizations": {
     "vscode": {
