--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -17,15 +21,14 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: billraymond
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository }}/sveltekit:latest
-          docker build -t $IMAGE_NAME ./web || docker build -t $IMAGE_NAME .
+          IMAGE_NAME=ghcr.io/billraymond/cambermast-work-hub/sveltekit:latest
+          docker build -t $IMAGE_NAME .
           docker push $IMAGE_NAME
-        # Note: Adjust path to Dockerfile if needed
 
       - name: Deploy to Hostinger VPS
         uses: appleboy/ssh-action@v1.1.0
