fix docker build and push

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Build and push Docker image
         run: |
+          cd deploy/sveltekit
           IMAGE_NAME=ghcr.io/billraymond/cambermast-work-hub/sveltekit:latest
           docker build -t $IMAGE_NAME .
           docker push $IMAGE_NAME
