--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - main
 
-permissions:
-  contents: read
-  packages: write
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -17,28 +13,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Log in to GitHub Container Registry
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: billraymond
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
         run: |
-          cd deploy/sveltekit
-          IMAGE_NAME=ghcr.io/billraymond/cambermast-work-hub/sveltekit:latest
-          docker build -t $IMAGE_NAME .
+          IMAGE_NAME=ghcr.io/${{ github.repository }}/sveltekit:latest
+          docker build -t $IMAGE_NAME ./deploy/sveltekit
           docker push $IMAGE_NAME
 
-      - name: Deploy to Hostinger VPS
+      - name: Deploy to VPS
         uses: appleboy/ssh-action@v1.1.0
         with:
-          host: srv914482.hstgr.cloud
+          host: srv914482
           username: billraymond
           key: ${{ secrets.DEPLOY_KEY }}
           script: |
             cd ~/homelab/sveltekit
             docker compose pull sveltekit
-            docker compose up -d sveltekit sveltekit-on-hstgr
+            docker compose up -d --force-recreate sveltekit sveltekit-on-hstgr
             docker image prune -f
