--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,8 +2,8 @@
   "name": "Cambermast Work Hub",
   "image": "mcr.microsoft.com/devcontainers/javascript-node:20-bookworm",
   "postCreateCommand": "npm install",
-  "postAttachCommand": "npm run dev",
-  "forwardPorts": [5173],
+  "postAttachCommand": "sh -c 'if ! lsof -i :5105 -t >/dev/null; then npm run dev; else echo \"Dev server already running on port 5105\"; fi'",
+  "forwardPorts": [5105],
   "customizations": {
     "vscode": {
       "extensions": [
